- adaptation for old authorization with new frontend libraries