@@ -1,69 +1,63 @@
 package pl.databucket.server.controller;
 
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-import javax.validation.Valid;
-import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.oauth2.jwt.Jwt;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import pl.databucket.server.dto.AuthRespDTO;
-import pl.databucket.server.dto.ChangePasswordDtoRequest;
-import pl.databucket.server.dto.UserDtoRequest;
-import pl.databucket.server.dto.UserDtoResponse;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.web.bind.annotation.*;
+import pl.databucket.server.dto.*;
 import pl.databucket.server.entity.Team;
 import pl.databucket.server.entity.User;
 import pl.databucket.server.exception.ExceptionFormatter;
 import pl.databucket.server.exception.ItemNotFoundException;
 import pl.databucket.server.exception.SomeItemsNotFoundException;
+import pl.databucket.server.security.CustomUserDetails;
 import pl.databucket.server.security.TokenProvider;
 import pl.databucket.server.service.TeamService;
 import pl.databucket.server.service.UserService;
 
+import javax.validation.Valid;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+
 @CrossOrigin(origins = "*", maxAge = 3600)
 @RequestMapping("/api/users")
 @RestController
-@RequiredArgsConstructor
 public class UserController {
 
-    private final UserService userService;
-    private final TeamService teamService;
-    private final ModelMapper modelMapper;
-    private final TokenProvider jwtTokenUtil;
+    @Autowired
+    private UserService userService;
+
+    @Autowired
+    private TeamService teamService;
+
+    @Autowired
+    private ModelMapper modelMapper;
+
+    @Autowired
+    private TokenProvider jwtTokenUtil;
+
     private final ExceptionFormatter exceptionFormatter = new ExceptionFormatter(UserController.class);
 
 
     @PreAuthorize("hasAnyRole('ADMIN', 'MEMBER')")
     @GetMapping
-    public ResponseEntity<?> getUsers(Authentication auth) {
+    public ResponseEntity<?> getUsers() {
         try {
-            Jwt jwt = (Jwt) auth.getPrincipal();
-            Long projectId = jwt.getClaim(TokenProvider.PROJECT_ID);
-            List<User> users = userService.getUsers(projectId.intValue());
+            List<User> users = userService.getUsers(((CustomUserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getProjectId());
             Set<Short> projectTeams = teamService.getTeams().stream().map(Team::getId).collect(Collectors.toSet());
-            List<UserDtoResponse> usersDto = users.stream().map(item -> modelMapper.map(item, UserDtoResponse.class))
-                .toList();
+            List<UserDtoResponse> usersDto = users.stream().map(item -> modelMapper.map(item, UserDtoResponse.class)).collect(Collectors.toList());
 
             // filter teams from current project
             for (UserDtoResponse userDto : usersDto) {
-                if (userDto.getTeamsIds() != null) {
+                if (userDto.getTeamsIds() != null)
                     userDto.getTeamsIds().retainAll(projectTeams);
-                }
             }
 
-            return ResponseEntity.ok(usersDto);
+            return new ResponseEntity<>(usersDto, HttpStatus.OK);
         } catch (IllegalArgumentException | ItemNotFoundException e1) {
             return exceptionFormatter.customException(e1, HttpStatus.NOT_ACCEPTABLE);
         }
@@ -76,7 +70,7 @@ public class UserController {
             User user = userService.modifyUser(userDtoRequest);
             UserDtoResponse userDtoResponse = new UserDtoResponse();
             modelMapper.map(user, userDtoResponse);
-            return ResponseEntity.ok(userDtoResponse);
+            return new ResponseEntity<>(userDtoResponse, HttpStatus.OK);
         } catch (SomeItemsNotFoundException e) {
             return exceptionFormatter.customException(e, HttpStatus.NOT_FOUND);
         } catch (Exception e) {
@@ -89,7 +83,7 @@ public class UserController {
     public ResponseEntity<?> changePassword(@Valid @RequestBody ChangePasswordDtoRequest changePasswordDtoRequest) {
         try {
             userService.changePassword(changePasswordDtoRequest);
-            return ResponseEntity.ok().build();
+            return new ResponseEntity<>(null, HttpStatus.OK);
         } catch (IllegalArgumentException e1) {
             return exceptionFormatter.customException(e1, HttpStatus.NOT_ACCEPTABLE);
         }
@@ -99,14 +93,12 @@ public class UserController {
      * Can be used when changing project
      */
     @PreAuthorize("hasAnyRole('MEMBER', 'ADMIN')")
-    @PutMapping(value = "/change-project")
-    public ResponseEntity<?> changeProject(
-        @Valid @RequestParam int projectId, Authentication auth) {
+    @PostMapping(value = "/change-project")
+    public ResponseEntity<?> changeProject(@Valid @RequestBody AuthReqDTO userDto) {
         try {
-            AuthRespDTO authDtoResponse = AuthRespDTO.builder()
-                .token(jwtTokenUtil.generateToken(auth, projectId))
-                .build();
-            return ResponseEntity.ok(authDtoResponse);
+            AuthRespDTO authDtoResponse = new AuthRespDTO();
+            authDtoResponse.setToken(jwtTokenUtil.generateToken(SecurityContextHolder.getContext().getAuthentication(), userDto.getProjectId()));
+            return new ResponseEntity<>(authDtoResponse, HttpStatus.OK);
         } catch (IllegalArgumentException e1) {
             return exceptionFormatter.customException(e1, HttpStatus.NOT_ACCEPTABLE);
         }
