@@ -1,68 +1,62 @@
 package pl.databucket.server.service;
 
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Service;
 import pl.databucket.server.dto.BucketDto;
-import pl.databucket.server.entity.Bucket;
-import pl.databucket.server.entity.DataClass;
-import pl.databucket.server.entity.Group;
-import pl.databucket.server.entity.Role;
-import pl.databucket.server.entity.Tag;
-import pl.databucket.server.entity.Team;
-import pl.databucket.server.entity.User;
-import pl.databucket.server.entity.View;
+import pl.databucket.server.entity.*;
 import pl.databucket.server.exception.ItemAlreadyExistsException;
 import pl.databucket.server.exception.ItemNotFoundException;
 import pl.databucket.server.exception.ModifyByNullEntityIdException;
-import pl.databucket.server.repository.BucketRepository;
-import pl.databucket.server.repository.DataClassRepository;
-import pl.databucket.server.repository.GroupRepository;
-import pl.databucket.server.repository.RoleRepository;
-import pl.databucket.server.repository.TagRepository;
-import pl.databucket.server.repository.TeamRepository;
-import pl.databucket.server.repository.UserRepository;
-import pl.databucket.server.repository.ViewRepository;
+import pl.databucket.server.repository.*;
 import pl.databucket.server.service.data.Query;
 
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+
 @Service
-@RequiredArgsConstructor
 public class BucketService {
 
-    private final BucketRepository bucketRepository;
+    @Autowired
+    private BucketRepository bucketRepository;
 
-    private final GroupRepository groupRepository;
+    @Autowired
+    private GroupRepository groupRepository;
 
-    private final UserRepository userRepository;
+    @Autowired
+    private UserRepository userRepository;
 
-    private final TeamRepository teamRepository;
+    @Autowired
+    private TeamRepository teamRepository;
 
-    private final RoleRepository roleRepository;
+    @Autowired
+    private RoleRepository roleRepository;
 
-    private final DataClassRepository dataClassRepository;
+    @Autowired
+    private DataClassRepository dataClassRepository;
 
-    private final TagRepository tagRepository;
+    @Autowired
+    private TagRepository tagRepository;
 
-    private final ViewRepository viewRepository;
+    @Autowired
+    private ViewRepository viewRepository;
 
-    private final NamedParameterJdbcTemplate jdbcTemplate;
+    @Autowired
+    private NamedParameterJdbcTemplate jdbcTemplate;
 
     Logger logger = LoggerFactory.getLogger(BucketService.class);
 
     public Bucket createBucket(BucketDto bucketDto) throws ItemAlreadyExistsException, ItemNotFoundException {
-        if (bucketRepository.existsByNameAndDeleted(bucketDto.getName(), false)) {
+        if (bucketRepository.existsByNameAndDeleted(bucketDto.getName(), false))
             throw new ItemAlreadyExistsException(Bucket.class, bucketDto.getName());
-        }
 
         Bucket bucket = new Bucket();
         bucket.setName(bucketDto.getName());
@@ -81,30 +75,28 @@ public class BucketService {
 
         if (bucketDto.getClassId() != null) {
             DataClass dataClass = dataClassRepository.findByIdAndDeleted(bucketDto.getClassId(), false);
-            if (dataClass != null) {
+            if (dataClass != null)
                 bucket.setDataClass(dataClass);
-            } else {
+            else
                 throw new ItemNotFoundException(DataClass.class, bucketDto.getClassId());
-            }
         }
 
-        if (bucketDto.getGroupsIds() != null && !bucketDto.getGroupsIds().isEmpty()) {
+        if (bucketDto.getGroupsIds() != null && bucketDto.getGroupsIds().size() > 0) {
             List<Group> groups = groupRepository.findAllByDeletedAndIdIn(false, bucketDto.getGroupsIds());
-            if (!groups.isEmpty()) {
+            if (groups.size() > 0)
                 for (Group group : groups) {
                     group.getBuckets().add(bucket);
                     groupRepository.save(group);
                 }
-            }
             bucket.setGroups(new HashSet<>(groups));
         }
 
-        if (bucketDto.getUsersIds() != null && !bucketDto.getUsersIds().isEmpty()) {
+        if (bucketDto.getUsersIds() != null && bucketDto.getUsersIds().size() > 0) {
             List<User> users = userRepository.findAllByIdIn(bucketDto.getUsersIds());
             bucket.setUsers(new HashSet<>(users));
         }
 
-        if (bucketDto.getTeamsIds() != null && !bucketDto.getTeamsIds().isEmpty()) {
+        if (bucketDto.getTeamsIds() != null && bucketDto.getTeamsIds().size() > 0) {
             List<Team> teams = teamRepository.findAllByIdIn(bucketDto.getTeamsIds());
             bucket.setTeams(new HashSet<>(teams));
         }
@@ -113,32 +105,32 @@ public class BucketService {
 
         // Create table for data
         String sql = "CREATE TABLE public.\"" + bucket.getTableName() + "\" ("
-            + "data_id bigserial NOT NULL,"
-            + "tag_id bigint NULL,"
-            + "reserved boolean NOT NULL DEFAULT false,"
-            + "reserved_by character varying(50) DEFAULT NULL,"
-            + "properties jsonb NOT NULL DEFAULT '{}'::jsonb,"
-            + "created_by character varying(50) NOT NULL,"
-            + "created_at timestamp without time zone NOT NULL DEFAULT current_timestamp,"
-            + "modified_by character varying(50),"
-            + "modified_at timestamp without time zone NOT NULL DEFAULT current_timestamp,"
-            + "PRIMARY KEY (data_id),"
-            + "CONSTRAINT fk_tag_id FOREIGN KEY(tag_id) REFERENCES tags(tag_id))";
+                + "data_id bigserial NOT NULL,"
+                + "tag_id bigint NULL,"
+                + "reserved boolean NOT NULL DEFAULT false,"
+                + "reserved_by character varying(50) DEFAULT NULL,"
+                + "properties jsonb NOT NULL DEFAULT '{}'::jsonb,"
+                + "created_by character varying(50) NOT NULL,"
+                + "created_at timestamp without time zone NOT NULL DEFAULT current_timestamp,"
+                + "modified_by character varying(50),"
+                + "modified_at timestamp without time zone NOT NULL DEFAULT current_timestamp,"
+                + "PRIMARY KEY (data_id),"
+                + "CONSTRAINT fk_tag_id FOREIGN KEY(tag_id) REFERENCES tags(tag_id))";
 
         logger.debug(sql);
         jdbcTemplate.getJdbcTemplate().execute(sql);
 
         // Create table for history
         sql = "CREATE TABLE \"" + bucket.getTableHistoryName() + "\" ("
-            + "id bigserial NOT NULL,"
-            + "data_id bigint NOT NULL,"
-            + "tag_id smallint DEFAULT NULL,"
-            + "reserved boolean DEFAULT NULL,"
-            + "properties jsonb DEFAULT NULL,"
-            + "modified_at timestamp without time zone NOT NULL DEFAULT current_timestamp,"
-            + "modified_by character varying(50),"
-            + "PRIMARY KEY (id),"
-            + "CONSTRAINT fk_tag_h_id FOREIGN KEY(data_id) REFERENCES \"" + bucket.getTableName() + "\"(data_id))";
+                + "id bigserial NOT NULL,"
+                + "data_id bigint NOT NULL,"
+                + "tag_id smallint DEFAULT NULL,"
+                + "reserved boolean DEFAULT NULL,"
+                + "properties jsonb DEFAULT NULL,"
+                + "modified_at timestamp without time zone NOT NULL DEFAULT current_timestamp,"
+                + "modified_by character varying(50),"
+                + "PRIMARY KEY (id),"
+                + "CONSTRAINT fk_tag_h_id FOREIGN KEY(data_id) REFERENCES \"" + bucket.getTableName() + "\"(data_id))";
 
         logger.debug(sql);
         jdbcTemplate.getJdbcTemplate().execute(sql);
@@ -170,23 +162,19 @@ public class BucketService {
         return bucketRepository.findAllByDeletedAndIdIn(false, ids);
     }
 
-    public Bucket modifyBucket(BucketDto bucketDto)
-        throws ItemAlreadyExistsException, ItemNotFoundException, ModifyByNullEntityIdException {
-        if (bucketDto.getId() == null) {
+    public Bucket modifyBucket(BucketDto bucketDto) throws ItemAlreadyExistsException, ItemNotFoundException, ModifyByNullEntityIdException {
+        if (bucketDto.getId() == null)
             throw new ModifyByNullEntityIdException(Bucket.class);
-        }
 
         Bucket bucket = bucketRepository.findByIdAndDeleted(bucketDto.getId(), false);
 
-        if (bucket == null) {
+        if (bucket == null)
             throw new ItemNotFoundException(Bucket.class, bucketDto.getId());
-        }
 
-        if (!bucket.getName().equals(bucketDto.getName())) {
-            if (bucketRepository.existsByNameAndDeleted(bucketDto.getName(), false)) {
+        if (!bucket.getName().equals(bucketDto.getName()))
+            if (bucketRepository.existsByNameAndDeleted(bucketDto.getName(), false))
                 throw new ItemAlreadyExistsException(Bucket.class, bucketDto.getName());
-            }
-        }
+
 
         bucket.setName(bucketDto.getName());
         bucket.setDescription(bucketDto.getDescription());
@@ -197,16 +185,14 @@ public class BucketService {
         if (bucketDto.getClassId() != null) {
             DataClass dataClass = dataClassRepository.findByIdAndDeleted(bucketDto.getClassId(), false);
             bucket.setDataClass(dataClass);
-        } else {
+        } else
             bucket.setDataClass(null);
-        }
 
         // Modify groups
         Set<Long> currentGroupsIds = bucket.getGroups().stream().map(Group::getId).collect(Collectors.toSet());
         Set<Long> newGroupsIds = bucketDto.getGroupsIds();
         if (!(currentGroupsIds.containsAll(newGroupsIds) && newGroupsIds.size() == currentGroupsIds.size())) {
-            Set<Long> toAdd = newGroupsIds.stream().filter(element -> !currentGroupsIds.contains(element))
-                .collect(Collectors.toSet());
+            Set<Long> toAdd = newGroupsIds.stream().filter(element -> !currentGroupsIds.contains(element)).collect(Collectors.toSet());
             if (toAdd.size() > 0) {
                 List<Group> groups = groupRepository.findAllByDeletedAndIdIn(false, toAdd);
                 for (Group group : groups) {
@@ -215,8 +201,7 @@ public class BucketService {
                 }
             }
 
-            Set<Long> toRemove = currentGroupsIds.stream().filter(element -> !newGroupsIds.contains(element))
-                .collect(Collectors.toSet());
+            Set<Long> toRemove = currentGroupsIds.stream().filter(element -> !newGroupsIds.contains(element)).collect(Collectors.toSet());
             if (toRemove.size() > 0) {
                 List<Group> groups = groupRepository.findAllByDeletedAndIdIn(false, toRemove);
                 for (Group group : groups) {
@@ -233,16 +218,14 @@ public class BucketService {
         if (bucketDto.getUsersIds() != null && bucketDto.getUsersIds().size() > 0) {
             List<User> users = userRepository.findAllByIdIn(bucketDto.getUsersIds());
             bucket.setUsers(new HashSet<>(users));
-        } else {
+        } else
             bucket.setUsers(null);
-        }
 
         if (bucketDto.getTeamsIds() != null && bucketDto.getTeamsIds().size() > 0) {
             List<Team> teams = teamRepository.findAllByIdIn(bucketDto.getTeamsIds());
             bucket.setTeams(new HashSet<>(teams));
-        } else {
+        } else
             bucket.setTeams(null);
-        }
 
         if (bucket.isHistory() != bucketDto.isHistory()) {
             if (bucketDto.isHistory()) {
@@ -261,9 +244,8 @@ public class BucketService {
         if (bucketDto.getRoleId() != null) {
             Role role = roleRepository.getOne(bucketDto.getRoleId());
             bucket.setRole(role);
-        } else {
+        } else
             bucket.setRole(null);
-        }
 
         return bucketRepository.save(bucket);
     }
@@ -271,9 +253,8 @@ public class BucketService {
     public void deleteBucket(long bucketId) throws ItemNotFoundException {
         Bucket bucket = bucketRepository.findByIdAndDeleted(bucketId, false);
 
-        if (bucket == null) {
+        if (bucket == null)
             throw new ItemNotFoundException(Bucket.class, bucketId);
-        }
 
         for (Group group : bucket.getGroups()) {
             group.getBuckets().remove(bucket);
@@ -309,10 +290,10 @@ public class BucketService {
         removeBeforeDeleteTrigger(bucket);
 
         String sql = "CREATE TRIGGER trigger_before_delete\n" +
-            "BEFORE DELETE\n" +
-            "ON \"" + bucket.getTableName() + "\"" +
-            "FOR EACH ROW\n" +
-            "EXECUTE PROCEDURE before_delete()";
+                "BEFORE DELETE\n" +
+                "ON \"" + bucket.getTableName() + "\"" +
+                "FOR EACH ROW\n" +
+                "EXECUTE PROCEDURE before_delete()";
 
         logger.debug(sql);
         jdbcTemplate.getJdbcTemplate().execute(sql);
@@ -322,10 +303,10 @@ public class BucketService {
         removeAfterInsertTrigger(bucket);
 
         String sql = "CREATE TRIGGER trigger_after_insert\n" +
-            "AFTER INSERT\n" +
-            "ON \"" + bucket.getTableName() + "\"\n" +
-            "FOR EACH ROW\n" +
-            "EXECUTE PROCEDURE after_insert()";
+                "AFTER INSERT\n" +
+                "ON \"" + bucket.getTableName() + "\"\n" +
+                "FOR EACH ROW\n" +
+                "EXECUTE PROCEDURE after_insert()";
 
         logger.debug(sql);
         jdbcTemplate.getJdbcTemplate().execute(sql);
@@ -335,10 +316,10 @@ public class BucketService {
         removeAfterUpdateTrigger(bucket);
 
         String sql = "CREATE TRIGGER trigger_after_update\n" +
-            "AFTER UPDATE\n" +
-            "ON \"" + bucket.getTableName() + "\"\n" +
-            "FOR EACH ROW\n" +
-            "EXECUTE PROCEDURE after_update()";
+                "AFTER UPDATE\n" +
+                "ON \"" + bucket.getTableName() + "\"\n" +
+                "FOR EACH ROW\n" +
+                "EXECUTE PROCEDURE after_update()";
 
         logger.debug(sql);
         jdbcTemplate.getJdbcTemplate().execute(sql);
@@ -363,21 +344,17 @@ public class BucketService {
     }
 
     public List<Bucket> getAccessTreeBuckets(User user) {
-        return bucketRepository.findAllByDeletedOrderById(false).stream()
-            .filter(bucket -> hasUserAccessToBucket(bucket, user)).toList();
+        return bucketRepository.findAllByDeletedOrderById(false).stream().filter(bucket -> hasUserAccessToBucket(bucket, user)).collect(Collectors.toList());
     }
 
     public boolean hasUserAccessToBucket(Bucket bucket, User user) {
-        boolean accessForUser = !bucket.getUsers().isEmpty() && bucket.getUsers().contains(user);
+        boolean accessForUser = bucket.getUsers().size() > 0 && bucket.getUsers().contains(user);
 
-        if (accessForUser) {
+        if (accessForUser)
             return true;
-        } else {
-            boolean accessByRole =
-                bucket.getRole() != null ? user.getRoles().contains(bucket.getRole()) : !bucket.getTeams().isEmpty();
-            boolean accessByTeam =
-                !bucket.getTeams().isEmpty() ? !Collections.disjoint(bucket.getTeams(), user.getTeams())
-                    : bucket.getRole() != null;
+        else {
+            boolean accessByRole = bucket.getRole() != null ? user.getRoles().contains(bucket.getRole()) : bucket.getTeams().size() > 0;
+            boolean accessByTeam = bucket.getTeams().size() > 0 ? !Collections.disjoint(bucket.getTeams(), user.getTeams()) : bucket.getRole() != null;
             return accessByRole && accessByTeam;
         }
     }
